--- a/WalletApp.BL/WalletApp.BL.csproj
+++ b/WalletApp.BL/WalletApp.BL.csproj
@@ -10,4 +10,13 @@
       <ProjectReference Include="..\WalletApp.Core\WalletApp.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.20" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.18" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Repositories\" />
+    </ItemGroup>
+
 </Project>
